Solves alignment issues and background in search results

--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -180,6 +180,10 @@ body {
   margin-top: 20px;
 }
 
+.search-results li:first-of-type {
+  margin-top: 0!important;
+}
+
 .search-result {
   color: var(--text);
 }
@@ -187,6 +191,10 @@ body {
 .search-result:hover {
   background: var(--logo-background);
   text-decoration: none;
+}
+
+.search-result ul.matching-ingredients-results li {
+  background: none;
 }
 
 .search-description:first-of-type {
